# oxiplate-derive

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: release-plz.yml
src/: lib.rs
src/syntax/: comment.rs  expression.rs  item.rs  mod.rs  static.rs  template.rs  writ.rs
templates/: extends-deep.html.oxip  extends-inner-wrapper.html.oxip  extends-nested-different-blocks-layout.html.oxip  extends-nested-different-blocks-wrapper.html.oxip  extends-nested-different-blocks.html.oxip  extends-wrapper.html.oxip  extends.html.oxip  unicode.html.oxip
tests/: borrow.rs  broken.rs  calc.rs  clippy.rs  collapsed-whitespace-after-tag.rs  comparisons-numbers.rs  comparisons.rs  expansion.rs  extends-lifetime.rs  extends-nested-different-blocks.rs  extends-nested.rs  extends.rs  external.rs  field.rs  for.rs  format-injection.rs  if-else.rs  if-elseif-else.rs  if-elseif-let-path.rs  if-elseif-let.rs  if-elseif.rs  if-let-path.rs  if-let.rs  if.rs  method.rs  not.rs  rust-keywords.rs  unicode.rs  variable.rs  variables.rs  whitespace.rs
tests/broken/: add-bools.rs  add-bools.stderr  add-u8-and-bool.rs  add-u8-and-bool.stderr  escaped-rust-string.rs  escaped-rust-string.stderr  external.rs  external.stderr  for-bad-variable.rs  for-bad-variable.stderr  for-no-expression.rs  for-no-expression.stderr  for-no-ident.rs  for-no-ident.stderr  for-no-in.rs  for-no-in.stderr  for-unclosed.rs  for-unclosed.stderr  invalid-statement.rs  invalid-statement.stderr  missing-if-expression.rs  (+23 more)
wip/: .gitignore
(+36 files in other folders)
